[gd_scene load_steps=4 format=3]

[ext_resource type="Texture2D" uid="uid://nw51dsnvsjh7" path="res://Assets/Art/Props/test/test_object6.png" id="1_3gm3f"]
[ext_resource type="Script" path="res://Assets/Scripts/UI/Menus/LevelSelect.gd" id="1_mfada"]
[ext_resource type="Texture2D" uid="uid://3nidym386d2c" path="res://Assets/Art/Props/test/test_object3.png" id="2_rn1ao"]

[node name="LevelSelect1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mfada")

[node name="LevelSelect" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="AreaLogo" type="NinePatchRect" parent="LevelSelect"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_3gm3f")

[node name="RichTextLabel" type="RichTextLabel" parent="LevelSelect/AreaLogo"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]Area 1[center]"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="LevelSelect"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Levels" type="HBoxContainer" parent="LevelSelect"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 50
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="LevelSelect/Levels"]
layout_mode = 2

[node name="Level1" type="TextureButton" parent="LevelSelect/Levels"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_rn1ao")
stretch_mode = 5

[node name="Level2" type="TextureButton" parent="LevelSelect/Levels"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_rn1ao")
stretch_mode = 5

[node name="Level3" type="TextureButton" parent="LevelSelect/Levels"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_rn1ao")
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="LevelSelect/Levels"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="LevelSelect"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Return" type="HBoxContainer" parent="LevelSelect"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="LevelSelect/Return"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Return" type="TextureButton" parent="LevelSelect/Return"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("1_3gm3f")
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="LevelSelect/Return/Return"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
bbcode_enabled = true
text = "[center]<[/center]"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="Next" type="TextureButton" parent="LevelSelect/Return"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("1_3gm3f")
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="LevelSelect/Return/Next"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
bbcode_enabled = true
text = "[center]>[/center]"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="MarginContainer2" type="MarginContainer" parent="LevelSelect/Return"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="LevelSelect"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[connection signal="pressed" from="LevelSelect/Levels/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="LevelSelect/Levels/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="LevelSelect/Levels/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="LevelSelect/Return/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="LevelSelect/Return/Next" to="." method="_on_next_pressed"]
